--- a/baby-names-app/src/App.css
+++ b/baby-names-app/src/App.css
@@ -1,38 +1,23 @@
 .App {
-  text-align: center;
+ background-color: rgb(245, 245, 190);
+text-align:  center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App-body {
+
+display: grid;
+grid-template-columns: repeat(10,5fr);
+gap: 10px;
+font-size: 2rem;
+justify-content: center;
+padding: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.f {
+  background-color: pink;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.m{
+  background-color: rgb(145, 180, 207);
 }
